Ya se puede agregar Sandias al vector

--- a/Ex1P3_DavidCastro.vcxproj.filters
+++ b/Ex1P3_DavidCastro.vcxproj.filters
@@ -18,5 +18,19 @@
     <ClCompile Include="Ex1P3_DavidCastro.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Minecraft.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Objeto.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Minecraft.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Objeto.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
