--- a/Ex1P3_DavidCastro.vcxproj
+++ b/Ex1P3_DavidCastro.vcxproj
@@ -128,6 +128,12 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Ex1P3_DavidCastro.cpp" />
+    <ClCompile Include="Minecraft.cpp" />
+    <ClCompile Include="Objeto.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Minecraft.h" />
+    <ClInclude Include="Objeto.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
